<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:padding="16dp">
         <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/adCard"
            android:padding="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center">
            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id"/>
        </android.support.v7.widget.CardView>
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
            android:layout_width="match_parent"
    android:layout_height="match_parent"
            android:layout_below="@+id/adCard"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <!--
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contentCard"
        android:layout_weight="4"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:padding="8dp"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/root_access"
            android:layout_height="wrap_content" android:id="@+id/rootAccess"/>
        <TextView
            android:padding="8dp"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/super_user"
            android:layout_height="wrap_content" android:id="@+id/superUser"/>
        <TextView
            android:padding="8dp"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/busy_box"
            android:layout_height="wrap_content" android:id="@+id/busyBox"/>
        <TextView
            android:padding="8dp"
            android:text="@string/path"
            android:textColor="@color/colorPrimaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/path"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">
            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/default_status"
                android:layout_height="wrap_content" android:id="@+id/rootAccessStatus"/>
            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/default_status"
                android:layout_height="wrap_content" android:id="@+id/superUserStatus"/>
            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/default_status"
                android:layout_height="wrap_content" android:id="@+id/busyBoxStatus"/>
            <TextView
                android:padding="8dp"
                android:text="@string/default_status"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/pathValue"/>
        </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
            -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="3">

    <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contentCard1"
                android:layout_weight="4"
                android:padding="16dp"
                android:backgroundTint="#F44336"
                app:cardCornerRadius="5dp"
                android:layout_margin="5dp">
        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.9" >
        <TextView
            android:padding="8dp"
            android:layout_width="match_parent"
            android:textColor="#FFFFFF"
            android:text="@string/root_access"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_height="wrap_content" android:id="@+id/rootAccess"/>
        <TextView
            android:padding="8dp"
            android:layout_width="match_parent"
            android:textColor="#FFFFFF"
            android:text="@string/default_status"
            android:layout_height="wrap_content" android:id="@+id/rootAccessStatus"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/contentCard2"
         android:layout_weight="4"
         android:padding="16dp"
         android:backgroundTint="#9C27B0"
         app:cardCornerRadius="5dp"
         android:layout_margin="5dp">
         <LinearLayout android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:layout_weight="0.9" >
              <TextView
                  android:padding="8dp"
                  android:layout_width="match_parent"
                  android:textColor="#FFFFFF"
                  android:text="@string/super_user"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  android:textSize="18dp"
                  android:textStyle="bold"
                  android:layout_height="wrap_content" android:id="@+id/superUser"/>
              <TextView
                  android:padding="8dp"
                  android:layout_width="match_parent"
                  android:textColor="#FFFFFF"
                  android:text="@string/default_status"
                  android:layout_height="wrap_content" android:id="@+id/superUserStatus"/>
         </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contentCard3"
        android:layout_weight="4"
        android:padding="16dp"
        android:backgroundTint="#009688"
        app:cardCornerRadius="5dp"
        android:layout_margin="5dp">
        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.9" >
            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:textColor="#FFFFFF"
                android:text="@string/busy_box"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_height="wrap_content" android:id="@+id/busyBox"/>
            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:textColor="#FFFFFF"
                android:text="@string/default_status"
                android:layout_height="wrap_content" android:id="@+id/busyBoxStatus"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contentCard4"
        android:layout_weight="4"
        android:padding="16dp"
        android:backgroundTint="#E91E63"
        app:cardCornerRadius="5dp"
        android:layout_margin="5dp">
        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.9" >
            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:textColor="#FFFFFF"
                android:text="@string/path"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_height="wrap_content" android:id="@+id/path"/>
            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:textColor="#FFFFFF"
                android:text="@string/default_status"
                android:layout_height="wrap_content" android:id="@+id/pathValue"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>





     </LinearLayout>
        </ScrollView>
</RelativeLayout>
